<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GJMain!</string>
    <string name="app_name">Guess Jet</string>
    <string name="main_title">Android Guess Jet</string>
    <string name="main_btn_play_with_ai">Play with Computer</string>
    <string name="main_btn_play_with_pp">Play with other People</string>
    <string name="main_btn_about">How to play</string>
    <string name="main_btn_exit">Exit</string>
</resources>
